chole bhature image fix

--- a/dishes/chole_bhature.html
+++ b/dishes/chole_bhature.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>CHOLE BHATURE</h1>
-    <img src="chole bhature image.jpg" alt="chole bhature image">
+    <img src="chole bhature image.jpg" alt="chole bhature image" height="1000" width="660">
 </body>
 </html>
