--- a/dishes/chole_bhature.html
+++ b/dishes/chole_bhature.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <h1>CHOLE BHATURE</h1>
-    <img src="chole bhature image.jpg" alt="chole bhature image" height="1000" width="660">
+    <img src="chole bhature image.jpg" alt="chole bhature image" height="380" width="260">
+    <ol>
+        <li>Soak 1 cup of chickpeas overnight. In the morning, pressure cook them with salt and enough water until they are soft and tender.</li>
+        <li>In a pan, heat oil and sauté finely chopped onions until golden. Add ginger-garlic paste, then chopped tomatoes. Cook until soft.</li>
+        <li>Mix in turmeric, cumin, coriander powder, red chili powder, and garam masala. Stir well, then add the cooked chickpeas. Simmer until thickened and flavorful.</li>
+        <li>In a bowl, combine 2 cups all-purpose flour, salt, baking soda, and ½ cup yogurt. Add water as needed to form a soft dough. Rest for 2 hours.</li>
+        <li>Divide the dough, roll into discs, and deep-fry in hot oil until they puff and turn golden brown.</li>
+        <li>Plate hot bhature with spicy chole. Garnish with sliced onions, lemon wedges, and optionally green chilies. Enjoy as a hearty meal.</li>
+    </ol>
 </body>
 </html>
