add final index.html

--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     <h1>WELCOME to recipes by Himanshu!</h1>
     <h3>Today's special are :<h3>
     <ul>
-        <li><em>  </em></li>
-        <li><em>  </em></li>
-        <li><em>  </em></li>
-        <li><em>  </em></li>
+        <li><em><a href="./dishes/chole_bhature.html" target="_blank" rel="noopener noreferrer">Chole Bhature</a></em></li>
+        <li><em><a href="./dishes/shahi_paneer.html" target="_blank" rel="noopener noreferrer">Shahi Paneer</a></em></li>
+        <li><em><a href="./dishes/chicken_korma.html" target="_blank" rel="noopener noreferrer">Chicken korma</a></em></li>
     </ul> 
+
     <h3>Today's sweets :</h3>
     <ul>
-        <li><em>  </em></li>
-        <li><em>  </em></li>
+        <li><em><strong><a href="./dishes/sweets/rasmalai.html" target="_blank" rel="noopener noreferrer">Rasmalai</a></strong></em></li>
     </ul> 
 </body>
 </html>
