--- a/dishes/chicken_korma.html
+++ b/dishes/chicken_korma.html
@@ -8,6 +8,11 @@
 <body>
     <h1>Chicken Korma</h1>
     <img src="chicken_korma.jpg" alt="chicken korma image" height="400" width="420">
+    <h3><em>Description:</em></h3>
+    <p>Chicken Korma is a creamy, mildly spiced Mughlai curry where chicken is slow-cooked in yogurt, nuts, and aromatic spices. It has a silky texture and rich flavor, making it a regal main course for special meals and occasions.</p>
+    <h3><em>Ingredients</em></h3>
+    <p>Dried chickpeas, onions, tomatoes, ginger-garlic paste, oil, cumin seeds, turmeric powder, coriander powder, red chili powder, garam masala, salt, fresh coriander, all-purpose flour (maida), yogurt, baking soda, water, oil for frying.</p>
+    <h3><em>Steps:</em></h3>
     <ol>
         <li>In a bowl, mix chicken pieces with yogurt, ginger-garlic paste, turmeric, red chili powder, and salt. Let it marinate for at least 30 minutes to enhance flavor.</li>
         <li>Heat ghee or oil in a pan. Sauté sliced onions until golden brown. Remove half for garnish and blend the rest into a paste with soaked cashews or almonds.</li>
