--- a/dishes/chole_bhature.html
+++ b/dishes/chole_bhature.html
@@ -8,6 +8,11 @@
 <body>
     <h1>CHOLE BHATURE</h1>
     <img src="chole bhature image.jpg" alt="chole bhature image" height="380" width="260">
+    <h3><em>Description:</em></h3>
+    <p>A classic North Indian dish of spicy chickpeas (chole) simmered in aromatic spices, paired with deep-fried, fluffy bread (bhature). It’s a rich, hearty meal often enjoyed for breakfast or lunch, full of bold and satisfying flavors.</p>
+     <h3><em>Ingredients:</em></h3>
+     <p>Dried chickpeas, onions, tomatoes, ginger-garlic paste, oil, cumin seeds, turmeric powder, coriander powder, red chili powder, garam masala, salt, fresh coriander, all-purpose flour (maida), yogurt, baking soda, water, oil for frying.</p>
+    <h3><em>Steps:</em></h3>
     <ol>
         <li>Soak 1 cup of chickpeas overnight. In the morning, pressure cook them with salt and enough water until they are soft and tender.</li>
         <li>In a pan, heat oil and sauté finely chopped onions until golden. Add ginger-garlic paste, then chopped tomatoes. Cook until soft.</li>
