--- a/dishes/shahi_paneer.html
+++ b/dishes/shahi_paneer.html
@@ -8,6 +8,11 @@
 <body>
     <h1>shahi paneer</h1>
     <img src="Shahi-paneer.jpg" alt="shahi paneer image" height="400" width="600">
+    <h3><em>Description:</em></h3>
+    <p>Shahi Paneer is a royal Mughlai curry made with soft paneer cubes simmered in a creamy, rich gravy of tomatoes, onions, nuts, and spices. Mildly sweet and fragrant, it’s a luxurious vegetarian delight served with naan or rice.</p>
+    <h3><em>Ingredients:</em></h3>
+    <p>Paneer, onions, tomato purée, ginger-garlic paste, cashews, fresh cream, milk, ghee or oil, cumin seeds, turmeric powder, red chili powder, coriander powder, garam masala, salt, saffron strands (optional), fresh coriander or cream for garnish.</p>
+    <h3><em>Steps:</em></h3>
     <ol>
         <li>In a pan, heat ghee or oil. Sauté chopped onions, garlic, ginger, green chilies, and cashews until soft. Let it cool, then blend into a smooth paste.</li>
         <li>In the same pan, add a little more ghee. Pour in the paste and cook until it thickens. Add tomato purée and cook until oil separates.</li>
