--- a/dishes/sweets/rasmalai.html
+++ b/dishes/sweets/rasmalai.html
@@ -8,6 +8,11 @@
 <body>
     <h1>Rasmalai</h1>
     <img src="Rasmalai.jpg" alt="rasmalai image" height="420" width="420">
+    <h3><em>Description:</em></h3>
+    <p>Rasmalai is a soft, spongy Indian dessert made of paneer discs soaked in saffron- and cardamom-flavored sweetened milk. Garnished with nuts, it’s served chilled and melts in the mouth—a delicate and luxurious sweet often enjoyed during festivals.</p>
+    <h3><em>Ingredients:</em></h3>
+    <p>Full-fat milk, lemon juice or vinegar, sugar, water, saffron strands, cardamom powder, almonds, pistachios.</p>
+    <h3><em>Steps:</em></h3>
     <ol>
         <li>Boil 1 liter of milk. Once it comes to a boil, add lemon juice or vinegar to curdle it. Strain using a muslin cloth and wash with water. Hang for 30–45 minutes to remove excess water.</li>
         <li>Knead the chenna until smooth. Make small, flat discs (rasgullas). Ensure there are no cracks for a soft texture.</li>
