--- a/dishes/chicken_korma.html
+++ b/dishes/chicken_korma.html
@@ -9,7 +9,7 @@
     <h1>Chicken Korma</h1>
     <img src="chicken_korma.jpg" alt="chicken korma image" height="400" width="420">
     <h3><em>Description:</em></h3>
-    <p>Chicken Korma is a creamy, mildly spiced Mughlai curry where chicken is slow-cooked in yogurt, nuts, and aromatic spices. It has a silky texture and rich flavor, making it a regal main course for special meals and occasions.</p>
+    <p>A classic North Indian dish of spicy chickpeas (chole) simmered in aromatic spices, paired with deep-fried, fluffy bread (bhature). It’s a rich, hearty meal often enjoyed for breakfast or lunch, full of bold and satisfying flavors.</p>
     <h3><em>Ingredients</em></h3>
     <p>Dried chickpeas, onions, tomatoes, ginger-garlic paste, oil, cumin seeds, turmeric powder, coriander powder, red chili powder, garam masala, salt, fresh coriander, all-purpose flour (maida), yogurt, baking soda, water, oil for frying.</p>
     <h3><em>Steps:</em></h3>
